--- a/app/src/main/res/layout/view_range_box.xml
+++ b/app/src/main/res/layout/view_range_box.xml
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/plotsProgressBar">
 
         <TextView
-            android:id="@+id/rangeName"
+            android:id="@+id/primaryNameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
@@ -65,7 +65,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/plotName"
+            android:id="@+id/secondaryNameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
@@ -91,20 +91,22 @@
         app:layout_constraintTop_toBottomOf="@+id/plotsProgressBar">
 
         <TextView
-            android:id="@+id/tvRange"
+            android:id="@+id/primaryIdTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="0dp"
             android:singleLine="true"
+            android:gravity="center"
             android:text=""
             android:textSize="?attr/fb_title_text_size"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvPlot"
+            android:id="@+id/secondaryIdTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
+            android:gravity="center"
             android:text=""
             android:textSize="?attr/fb_title_text_size"
             android:textStyle="bold" />
