--- a/app/src/main/res/layout/view_range_box.xml
+++ b/app/src/main/res/layout/view_range_box.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
-    <ProgressBar style="?android:attr/progressBarStyleHorizontal"
+    <ProgressBar
         android:id="@+id/plotsProgressBar"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:progressTint="?attr/colorAccent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/rangeLeft"
@@ -46,36 +47,38 @@
         android:id="@+id/namesHolderLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/valuesHolderLayout"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/rangeLeft"
-        app:layout_constraintTop_toBottomOf="@+id/plotsProgressBar"
-        app:layout_constraintHorizontal_weight="1">
+        app:layout_constraintTop_toBottomOf="@+id/plotsProgressBar">
 
         <TextView
             android:id="@+id/primaryNameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
             android:ellipsize="end"
-            android:layout_gravity="center"
             android:maxLines="1"
-            tools:text="row:"
             android:textSize="?attr/fb_title_text_size"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="row:" />
 
         <TextView
             android:id="@+id/secondaryNameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
             android:ellipsize="end"
-            android:layout_gravity="center"
             android:maxLines="1"
-            tools:text="col:"
             android:textSize="?attr/fb_title_text_size"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="col:" />
 
     </LinearLayout>
 
@@ -88,28 +91,30 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/rangeRight"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@id/namesHolderLayout"
-        app:layout_constraintTop_toBottomOf="@+id/plotsProgressBar"
-        app:layout_constraintHorizontal_weight="1">
+        app:layout_constraintTop_toBottomOf="@+id/plotsProgressBar">
 
         <TextView
             android:id="@+id/primaryIdTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:gravity="left"
             android:padding="0dp"
             android:singleLine="true"
-            android:gravity="center"
             android:text=""
             android:textSize="?attr/fb_title_text_size"
             android:textStyle="bold"
-            tools:text="1"/>
+            tools:text="1" />
 
         <TextView
             android:id="@+id/secondaryIdTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:gravity="left"
             android:singleLine="true"
-            android:gravity="center"
             android:text=""
             android:textSize="?attr/fb_title_text_size"
             android:textStyle="bold"
