--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="4dp"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/cell">
 
     <androidx.cardview.widget.CardView
         android:layout_width="@dimen/camera_preview_portrait_width"
@@ -41,6 +42,7 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageButton
+        android:layout_margin="8dp"
         android:background="@drawable/circle_background_simple"
         android:padding="8dp"
         android:layout_width="wrap_content"
