--- a/app/src/main/res/menu/menu_pref.xml
+++ b/app/src/main/res/menu/menu_pref.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_menu_quickshare"
-        android:icon="@drawable/ic_quickshare"
+        android:id="@+id/action_menu_nearby_share"
+        android:icon="@drawable/ic_nearby_share"
         app:showAsAction="always"
         android:title="@string/nearby_share_title" />
 </menu>
