--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -103,6 +103,9 @@
     <color name="high_contrast_chip_first_color">#c6c6c6</color>
     <color name="high_contrast_chip_second_color">#919191</color>
     <color name="high_contrast_chip_third_color">#5e5e5e</color>
+    <color name="high_contrast_active_cell_color">#373737</color>
+    <color name="high_contrast_data_filled_color">#878585</color>
+    <color name="high_contrast_empty_cell_color">@color/WHITE</color>
 
     <color name="circleBackgroundMiddleColor">#80FEFEFE</color>
     <color name="circleBackgroundMiddleColorPressed">#20FEFEFE</color>
