--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -316,4 +316,10 @@
 
     <attr name="fb_inverse_crop_region_color" format="color"/>
 
+    <!-- data grid colors -->
+    <attr name="dataFilledColor" format="color"/>
+    <attr name="emptyCellColor" format="color"/>
+    <attr name="activeCellColor" format="color"/>
+    <attr name="activeCellTextColor" format="color"/>
+    <attr name="cellTextColor" format="color"/>
 </resources>
