--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -131,6 +131,13 @@
         <item name="selected_date_circle_color">?fb_heatmap_color_medium</item>
 
         <item name="fb_inverse_crop_region_color">@color/main_inverse_crop_region_color</item>
+
+        <!-- DataGrid -->
+        <item name="emptyCellColor">@color/datagrid_empty_cell_color</item>
+        <item name="dataFilledColor">@color/main_primary_transparent</item>
+        <item name="activeCellColor">@color/main_primary_dark</item>
+        <item name="activeCellTextColor">@color/WHITE</item>
+        <item name="cellTextColor">@color/main_color_text_dark</item>
     </style>
 
     <!-- Blue Theme -->
@@ -179,6 +186,10 @@
         <item name="fb_heatmap_color_max">@color/blue_heatmap_color_max</item>
 
         <item name="selected_date_circle_color">?fb_heatmap_color_medium</item>
+
+        <!-- DataGrid -->
+        <item name="dataFilledColor">@color/blue_primary_transparent</item>
+        <item name="activeCellColor">@color/blue_primary_dark</item>
     </style>
 
     <!-- High Contrast Theme -->
@@ -310,8 +321,12 @@
         <item name="fb_first_chip_color">@color/high_contrast_chip_first_color</item>
         <item name="fb_second_chip_color">@color/high_contrast_chip_second_color</item>
         <item name="fb_third_chip_color">@color/high_contrast_chip_third_color</item>
-        <item name="fb_fourth_chip_color">@color/high_contrast_chip_third_color</item>
 
+
+        <!-- DataGrid -->
+        <item name="dataFilledColor">@color/high_contrast_data_filled_color</item>
+        <item name="emptyCellColor">@color/high_contrast_empty_cell_color</item>
+        <item name="activeCellColor">@color/high_contrast_active_cell_color</item>
     </style>
 
     <!-- need to define a theme for each type of material component until we can use the new themes -->
