--- a/app/src/main/res/xml/preferences_profile.xml
+++ b/app/src/main/res/xml/preferences_profile.xml
@@ -21,8 +21,15 @@
             android:summary="%s"
             android:title="@string/preferences_profile_require_interval_title" />
 
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="transfer_defaults"
+        android:title="@string/preferences_profile_device_title"
+        app:iconSpaceReserved="false">
         <Preference
-            android:icon="@drawable/ic_pref_profile_person"
+            android:icon="@drawable/ic_device_pref"
             android:key="pref_profile_device_name"
             android:title="@string/preferences_profile_set_device_name" />
 
