--- a/app/src/main/res/layout/activity_study_importer.xml
+++ b/app/src/main/res/layout/activity_study_importer.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/WHITE"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -65,6 +66,7 @@
         android:id="@+id/act_study_importer_lv"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        tools:listitem="@android:layout/simple_list_item_1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/brapi_importer_tl"
