--- a/app/src/main/res/layout/list_item_study.xml
+++ b/app/src/main/res/layout/list_item_study.xml
@@ -6,7 +6,8 @@
     android:id="@+id/list_item_study_cv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp">
+    android:layout_margin="4dp"
+    android:backgroundTint="@color/WHITE">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/list_item_brapi_filter_cl"
@@ -47,9 +48,12 @@
             android:layout_margin="16dp"
             app:chipIcon="@drawable/ic_dots_grid"
             android:checkable="false"
+            android:textColor="@color/BLACK"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/list_item_study_pb"
+            app:chipIconTint="@color/BLACK"
+            app:chipBackgroundColor="@color/light_gray"
             tools:text="108"/>
 
         <com.google.android.material.chip.Chip
@@ -60,9 +64,12 @@
             android:layout_margin="16dp"
             app:chipIcon="@drawable/ic_ruler"
             android:checkable="false"
+            android:textColor="@color/BLACK"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@id/list_item_study_units_chip"
             app:layout_constraintTop_toBottomOf="@id/list_item_study_pb"
+            app:chipIconTint="@color/BLACK"
+            app:chipBackgroundColor="@color/light_gray"
             tools:text="2" />
 
         <com.google.android.material.chip.Chip
@@ -73,9 +80,12 @@
             android:layout_margin="16dp"
             app:chipIcon="@drawable/map_marker_outline"
             android:checkable="false"
+            android:textColor="@color/BLACK"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@id/list_item_study_traits_chip"
             app:layout_constraintTop_toBottomOf="@id/list_item_study_pb"
+            app:chipIconTint="@color/BLACK"
+            app:chipBackgroundColor="@color/light_gray"
             tools:text="Manhattan, KS" />
 
         <com.google.android.material.chip.Chip
@@ -85,11 +95,14 @@
             android:layout_marginStart="16dp"
             app:chipIcon="@drawable/ic_trial"
             android:checkable="false"
+            android:textColor="@color/BLACK"
             android:ellipsize="end"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/list_item_study_units_chip"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:chipIconTint="@color/BLACK"
+            app:chipBackgroundColor="@color/light_gray"
             tools:text="PeeDee Otter Trial"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
