--- a/app/src/main/res/layout/dialog_device_name.xml
+++ b/app/src/main/res/layout/dialog_device_name.xml
@@ -19,4 +19,12 @@
         android:paddingLeft="5dp"
         android:singleLine="true" />
 
+    <TextView
+        android:id="@+id/error_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:textStyle="italic"
+        android:textColor="?attr/fb_error_message_color"/>
+
 </LinearLayout>
