Fix string formatting in nearby share

--- a/app/src/main/res/xml/preferences_profile.xml
+++ b/app/src/main/res/xml/preferences_profile.xml
@@ -25,7 +25,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="transfer_defaults"
+        android:key="settings_device"
         android:title="@string/preferences_profile_device_title"
         app:iconSpaceReserved="false">
         <Preference
