--- a/app/src/main/res/menu/cab_menu.xml
+++ b/app/src/main/res/menu/cab_menu.xml
@@ -1,14 +1,20 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/groupFields"
+        android:icon="@drawable/ic_group"
+        android:title="@string/tutorial_dialog_title"
+        app:showAsAction="ifRoom|withText" />
     <item
         android:id="@+id/menu_select_all"
         android:icon="@drawable/ic_tb_toggle_all"
         android:title="@string/fields_select_all"
-        android:showAsAction="ifRoom|withText"/>
+        app:showAsAction="ifRoom|withText"/>
     <item
         android:id="@+id/menu_export"
         android:icon="@drawable/ic_file_export_outline"
         android:title="@string/fields_export"
-        android:showAsAction="ifRoom|withText"/>
+        app:showAsAction="ifRoom|withText"/>
 <!--    <item-->
 <!--        android:id="@+id/menu_archive"-->
 <!--        android:icon="@drawable/ic_archive_arrow_down"-->
@@ -18,5 +24,5 @@
         android:id="@+id/menu_delete"
         android:icon="@drawable/ic_tb_delete"
         android:title="@string/fields_delete"
-        android:showAsAction="ifRoom|withText"/>
+        app:showAsAction="ifRoom|withText"/>
 </menu>
