--- a/app/src/main/res/layout/list_item_archived_fields_header.xml
+++ b/app/src/main/res/layout/list_item_archived_fields_header.xml
@@ -4,24 +4,29 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:padding="12dp">
+    android:padding="8dp"
+    android:background="@drawable/list_item_selector"
+    android:gravity="center_vertical">
+
+    <ImageView
+        android:id="@+id/archiveIcon"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:contentDescription="@string/group_archive"
+        android:src="@drawable/ic_archive"
+        android:padding="8dp" />
 
     <TextView
         style="@style/TextViewStyle.Bold.Title"
-        android:id="@+id/groupName"
+        android:id="@+id/archiveName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:text="@string/group_archived_value"
+        android:layout_marginStart="16dp"
         android:ellipsize="end"
         android:gravity="start"
         android:singleLine="true"
-        tools:text="Group Name" />
-
-    <ImageView
-        android:id="@+id/expandIcon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:contentDescription="TODO"
-        android:src="@drawable/ic_chevron_down" />
+        tools:text="Archived" />
 
 </LinearLayout>
