--- a/app/src/main/res/menu/cab_menu.xml
+++ b/app/src/main/res/menu/cab_menu.xml
@@ -1,20 +1,30 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<!-- Warning / error below for showAsAction should be ignored until Toolbar is replaced with AppCompatToolbar-->
+
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="AppCompatResource">
     <item
         android:id="@+id/groupFields"
         android:icon="@drawable/ic_group"
-        android:title="@string/tutorial_dialog_title"
-        app:showAsAction="ifRoom|withText" />
+        android:title="@string/menu_group"
+        android:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/archiveFields"
+        android:icon="@drawable/ic_archive_add"
+        android:title="@string/menu_archive"
+        android:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_select_all"
         android:icon="@drawable/ic_tb_toggle_all"
         android:title="@string/fields_select_all"
-        app:showAsAction="ifRoom|withText"/>
+        android:showAsAction="ifRoom"/>
     <item
         android:id="@+id/menu_export"
         android:icon="@drawable/ic_file_export_outline"
         android:title="@string/fields_export"
-        app:showAsAction="ifRoom|withText"/>
+        android:showAsAction="ifRoom"/>
 <!--    <item-->
 <!--        android:id="@+id/menu_archive"-->
 <!--        android:icon="@drawable/ic_archive_arrow_down"-->
@@ -24,5 +34,5 @@
         android:id="@+id/menu_delete"
         android:icon="@drawable/ic_tb_delete"
         android:title="@string/fields_delete"
-        app:showAsAction="ifRoom|withText"/>
+        android:showAsAction="ifRoom"/>
 </menu>
