--- a/app/src/main/res/menu/menu_trait_details.xml
+++ b/app/src/main/res/menu/menu_trait_details.xml
@@ -2,10 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/copy"
+        android:icon="@drawable/ic_content_copy"
+        app:showAsAction="always"
+        android:title="@string/traits_options_copy" />
+    <item
         android:id="@+id/edit"
         android:icon="@drawable/ic_rename"
         app:showAsAction="always"
-        android:title="@string/traits_rename" />
+        android:title="@string/traits_options_edit" />
     <item
         android:id="@+id/delete"
         android:icon="@drawable/ic_tb_delete"
